Updated profile picture, portfolio, etc

--- a/index.html
+++ b/index.html
@@ -121,26 +121,25 @@
           </div>
         </div>
         <div class="eight offset-by-one columns">
-          <p>Over the years, my future prospects changed like clockwork. 
-          Never have I ever committed to what type of person I would become in twenty years.
-          To this day it still remains a mystery.
+          <p>Over the years, my ambitions changed like clockwork. 
+          Never have I committed to my future in twenty years, and,
+          to this day, it still remains a mystery.
           </p>
           <p>
-          Unlike my inconsistent aspirations, my fascination towards the digital medium
-          never changed. Technology substantially eased even the smallest struggles; I wanted to create
-          this same effect for other people. Therefore,
-          with interests business, psychology, and design, I decided to pursue
-          computer science to secure skills within all of the key stages of app development.
+          Despite my indecisiveness, my fascination towards the digital medium
+          stayed true to itself. Technology improved my quality of life, whether it was keeping me on schedule,
+          waking me up in the morning, or talking to my peers. Having this effect on my life encouraged me to
+          help other people in the same way. That is when I found myself in app development.
           </p>
           <p>
           Currently, I endure the harsh winters of Cornell University, drudging
-          through the even harsher engineering curriculum. Despite my stark       
-          indifference towards the physical sciences like god-foresaken chemistry, 
-          engineering instilled a mentality and a work ethic to achieve my dreams even furthur.
+          through the even harsher engineering curriculum. Despite my       
+          indifference towards the physical sciences, 
+          engineering instilled a work ethic and perception that put me one step closer to my dream.
           </p>
           <p>
-          Outside of academics, I operated as a freelance graphic designer since early highschool 
-          and currently serve as an art director for several school organizations; in 
+          Outside of academics, I designed for freelance work since early highschool 
+          and, now, serve as an art director for school organizations; in 
           addition, I recently completed a six month contract as a UI/UX Dev for a promising 
           social networking app. On my free time, I am a member, choreographer, and e-board 
           member of, hip hop dance group, Breakfree.
@@ -190,7 +189,7 @@
   </section>
   <!-- End {Skills Section} -->
  
-  <!-- Contact Header -->
+  <!-- Contact Header
   <section id="current_agenda">
   <div class="section agenda">
     <div class="container">
@@ -229,7 +228,7 @@
     </div>
   </div>
   </section>
-  <!-- End {Contact Header} -->
+ End {Contact Header} -->
 
   <!-- Portfolio -->
   <section id="work_portfolio">
@@ -251,28 +250,35 @@
     <div class="container portfolio gallery">
         <ul class="full-width-grid">
           <li>
-            <a href="#"><img src="images/placeholder.png" /></a>
+            <a href="https://www.behance.net/gallery/24888061/Cornell-App-Development-Spring-2015"><img src="images/placeholder10.png" /></a>
             <div class="portfolio-title">
-            <h4><strong>THETA TAU WEBSITE</strong></h4>
-            <h3>Design</h3>
+            <h4><strong>CORNELL APP DEVELOPMENT</strong></h4>
+            <h3>UI/UX, Application Design</h3>
+            </div>
+          </li>
+          <li>
+            <a href="https://www.behance.net/gallery/24703375/Dispossessed-Concept-Art"><img src="images/placeholder9.png" /></a>
+            <div class="portfolio-title">
+            <h4><strong>DISPOSSESSED</strong></h4>
+            <h3>Design / Programming / Project Manager</h3>
+            </div>
+          </li>
+          <li>
+            <a href="https://www.behance.net/gallery/24885517/Website-Design-2014-2015"><img src="images/placeholder.png" /></a>
+            <div class="portfolio-title">
+            <h4><strong>WEBSITE DESIGN 2014-2015</strong></h4>
+            <h3>Website Design, UI/UX</h3>
             </div>
           </li>
          <li>
-            <a href="#"><img src="images/placeholder5.png" /></a>
+            <a href="https://www.behance.net/gallery/24886279/BreakFree-Showcase-2015-Millennials?"><img src="images/placeholder5.png" /></a>
             <div class="portfolio-title">
-            <h4><strong>MILLENAILS SHOWCASE</strong></h4>
+            <h4><strong>MILLENIALS SHOWCASE</strong></h4>
             <h3>Art Direction</h3>
             </div>
           </li>
           <li>
-            <a href="#"><img src="images/placeholder2.png" /></a>
-            <div class="portfolio-title">
-            <h4><strong>FINGER LAKES THERAPY WEBSITE</strong></h4>
-            <h3>Design & Front-end</h3>
-            </div>
-          </li>
-          <li>
-            <a href="http://www.frucketapp.com/"><img src="images/placeholder3.png" /></a>
+            <a href="https://www.behance.net/gallery/24885939/Frucket-Branding-UXUI"><img src="images/placeholder3.png" /></a>
             <div class="portfolio-title">
             <h4><strong>FRUCKET UX/UI</strong></h4>
             <h3>Design</h3>
@@ -286,7 +292,7 @@
             </div>
           </li>
           <li>
-            <a href="#"><img src="images/placeholder8.png" /></a>
+            <a href="https://github.com/andjosaquino/Gnomenwald-Project"><img src="images/placeholder8.png" /></a>
             <div class="portfolio-title">
             <h4><strong>GNOMENWALD PROJECT</strong></h4>
             <h3>Object-Oriented Programming & Swing UI</h3>
