Updated profile picture, portfolio, etc

--- a/index.html
+++ b/index.html
@@ -128,14 +128,14 @@
           <p>
           Despite my indecisiveness, my fascination towards the digital medium
           stayed true to itself. Technology improved my quality of life, whether it was keeping me on schedule,
-          waking me up in the morning, or talking to my peers. Having this effect on my life encouraged me to
-          help other people in the same way. That is when I found myself in app development.
+          waking me up in the morning, or talking to my friends. This effect on my life encouraged me to
+          help people in a similar way. Thus, I found myself in application development.
           </p>
           <p>
           Currently, I endure the harsh winters of Cornell University, drudging
-          through the even harsher engineering curriculum. Despite my       
+          through the even harsher engineering curriculum. While I do admit I have an      
           indifference towards the physical sciences, 
-          engineering instilled a work ethic and perception that put me one step closer to my dream.
+          engineering developed a work ethic and perception that will help my accomplish my dream.
           </p>
           <p>
           Outside of academics, I designed for freelance work since early highschool 
