--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="container">
           <div class="row">
             <div class="twelve columns landing">
-              <h1><strong>ANDREW AQUINO</strong></h1>
+              <h1>ANDREW AQUINO</h1>
               <p>Website Still Under Construction</p>
             </div>
           </div>
