Added Medium link

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           Despite my indecisiveness, my fascination towards the digital medium
           stayed true to itself. Technology improved my quality of life, whether it was keeping me on schedule,
           waking me up in the morning, or talking to my friends. This effect on my life encouraged me to
-          help people in a similar way. Thus, I found myself in application development.
+          help people in a similar way. Thus, I found myself in full-stack development and UX/UI.
           </p>
           <p>
           Currently, I endure the harsh winters of Cornell University, drudging
@@ -148,6 +148,7 @@
           <br>
           <a class="button" href="resume.pdf">Resume</a>
           <a class="button" href="https://github.com/andjosaquino">Github</a>
+          <a class="button" href="https://medium.com/@andrewaquino">Medium</a>
         </div>
       </div>
     </div>
@@ -285,7 +286,7 @@
             </div> 
           </li>
           <li>
-            <a href="#"><img src="images/placeholder4.png" /></a>
+            <a href=""><img src="images/placeholder4.png" /></a>
             <div class="portfolio-title">
             <h4><strong>WHEATHER THREADY</strong></h4>
             <h3>iOS Dev, Design, Marketing</h3>
@@ -447,7 +448,6 @@
         <div class="three columns">
           <a class="scroll" href="#about_me"><p>About Me</p></a>
           <a class="scroll" href="#skillset"><p>Skills</p></a>
-          <a class="scroll" href="#current_agenda"><p>Agenda</p></a>
         </div>
         <div class="three columns">
           <a class="scroll" href="#work_portfolio"><p>Portfolio</p></a>
