--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
     <header class="section">
         <div class="container">
           <div class="row">
-            <div class="twelve columns">
-              <p>AAQUINO.ME</p>
-            </div>
+
           </div>
         </div>
         <div class="container">
@@ -62,47 +60,6 @@
   </section>
   <!-- End {Header / Landing} -->    
   
-  <!-- Menu Bar -->
-  <div class = "section menu">
-    <div class="container">
-      <div class="row">
-        <div class="two columns first">
-          <h6>LOGO</h6>
-          <div class="header-line"></div>
-        </div>
-        <a class="scroll" href="#about_me">
-          <div class="two columns">
-            <h6>About</h6>
-            <div class="header-line"></div>
-          </div>
-        </a>
-        <a class="scroll" href="#skillset">
-          <div class="two columns">
-            <h6>Skills</h6>
-            <div class="header-line"></div>
-          </div>
-        </a>
-        <a class="scroll" href="#current_agenda">
-          <div class="two columns">
-            <h6>Agenda</h6>
-            <div class="header-line"></div>
-          </div>
-        </a>
-        <a class="scroll" href="#work_portfolio">
-          <div class="two columns">
-            <h6>Portfolio</h6>
-            <div class="header-line"></div>
-          </div>
-        </a>
-        <a class="scroll" href="#contact_me">
-          <div class="two columns">
-            <h6>Contact</h6>
-            <div class="header-line"></div>
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
   <!-- Menu End -->
   <!-- About Section -->
   <section id="about_me">
@@ -114,41 +71,23 @@
           <div class="circle user"></div></div>
           <div class="title">
           <h4><strong>ABOUT</strong></h4>
-          <div class="header-line left"></div>
-          <h3 class="focus-sub">
-            How does my journey of soul-searching and angst begin?
-          </h3>  
+          <div class="header-line left"></div> 
           </div>
         </div>
         <div class="eight offset-by-one columns">
-          <p>Over the years, my ambitions changed like clockwork. 
-          Never have I committed to my future in twenty years, and,
-          to this day, it still remains a mystery.
-          </p>
-          <p>
-          Despite my indecisiveness, my fascination towards the digital medium
-          stayed true to itself. Technology improved my quality of life, whether it was keeping me on schedule,
-          waking me up in the morning, or talking to my friends. This effect on my life encouraged me to
-          help people in a similar way. Thus, I found myself in full-stack development and UX/UI.
-          </p>
-          <p>
-          Currently, I endure the harsh winters of Cornell University, drudging
-          through the even harsher engineering curriculum. While I do admit I have an      
-          indifference towards the physical sciences, 
-          engineering developed a work ethic and perception that will help my accomplish my dream.
-          </p>
-          <p>
-          Outside of academics, I designed for freelance work since early highschool 
-          and, now, serve as an art director for school organizations; in 
-          addition, I recently completed a six month contract as a UI/UX Dev for a promising 
-          social networking app. On my free time, I am a member, choreographer, and e-board 
-          member of, hip hop dance group, Breakfree.
+          <h3 class="focus-sub">
+            How does my journey of soul-searching and angst begin?
+          </h3> 
+          <br>
+          <p>I am a junior computer science engineer intending towards a product design or management internship this upcoming summer.
           </p>
           <br>
           <br>
           <a class="button" href="resume.pdf">Resume</a>
           <a class="button" href="https://github.com/andjosaquino">Github</a>
           <a class="button" href="https://medium.com/@andrewaquino">Medium</a>
+          <a class="button" href="https:/behance.net/AndrewAquino">Behance</a>
+          <a class="button" href="https://dribbble.com/andjosaquino">Dribbble</a>
         </div>
       </div>
     </div>
@@ -161,28 +100,23 @@
   <div class = "section skills">
     <div class="container">
       <div class="row two-row-std">
-        <div class="three columns module divider">
+        <div class="three columns module">
             <div class="small-container"><img src="images/skills-ui.png"/></div>
             <h6><strong>UX/UI</strong></h6>
-            <p>Effecient and beautiful app design</p>
         </div>
-        <div class="three columns module divider">
+        <div class="three columns module">
 <div class="small-container"><img src="images/skills-artdir.png"/></div>
             <h6><strong>DEVELOPMENT</strong></h6>
-            <p>Clean and concise engineering</p>
         </div>
-        <div class="three columns module divider two-row-edge">
+        <div class="three columns module two-row-edge">
             <div class="small-container">
             <img src="images/skills-dev.png"/>
             </div>
             <h6><strong>ART DIRECTION</strong></h6>
-            <p>Design industry-level branding</p>
-
         </div>
         <div class="three columns module">
             <div class="small-container"> <img src="images/skills-marketing.png"/></div>
             <h6><strong>MARKETING</strong></h6>
-            <p>Showcase ideas in an elegant way</p>
         </div>
       </div>
     </div>
