--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div class="section intro">
     <div class="container">
       <div class="row">
-        <div class="three  columns about">
+        <div class="three  columns">
           <div class= "circle-container">
           <div class="circle user"></div></div>
           <div class="title">
@@ -74,20 +74,21 @@
           <div class="header-line left"></div> 
           </div>
         </div>
-        <div class="eight offset-by-one columns">
-          <h3 class="focus-sub">
-            How does my journey of soul-searching and angst begin?
-          </h3> 
+        <div class="nine columns">
           <br>
           <p>I am a junior computer science engineer intending towards a product design or management internship this upcoming summer.
           </p>
           <br>
           <br>
-          <a class="button" href="resume.pdf">Resume</a>
-          <a class="button" href="https://github.com/andjosaquino">Github</a>
-          <a class="button" href="https://medium.com/@andrewaquino">Medium</a>
-          <a class="button" href="https:/behance.net/AndrewAquino">Behance</a>
-          <a class="button" href="https://dribbble.com/andjosaquino">Dribbble</a>
+          <div class="row">
+            <a class="button three columns" href="resume.pdf">Resume</a>
+            <a class="button three columns" href="https://github.com/andjosaquino">Github</a>
+            <a class="button three columns" href="https://medium.com/@andrewaquino">Medium</a>
+          </div>
+          <div class="row">
+            <a class="button three columns" href="https:/behance.net/AndrewAquino">Behance</a>
+            <a class="button three columns" href="https://dribbble.com/andjosaquino">Dribbble</a>
+          </div>
         </div>
       </div>
     </div>
@@ -124,46 +125,6 @@
   </section>
   <!-- End {Skills Section} -->
  
-  <!-- Contact Header
-  <section id="current_agenda">
-  <div class="section agenda">
-    <div class="container">
-      <div class="row">
-        <div class="twelve columns center">
-          <h4><strong>AGENDA</strong></h4>
-          <div class="header-line"></div>
-          <h3>These are the skills I am in the process of improving.
-          </h3>
-        </div>
-      </div>
-      <div class="full-line"></div>
-     <div class="row agenda-mod weather">
-        <div class="four columns">
-          <h4><strong>WEATHER THREADY</strong></h4>
-          <h3>This project is seeking to change the way we seek
-          information through applications. Weather Thready 
-          skips the analysis and shows what is necessary.
-          </h3>
-          <br>
-           <a class="button" href=#>See Project</a>
-        </div>
-
-      </div>
-       <div class="row agenda-mod mackenzie">
-        <div class="four columns">
-          <h4><strong>RAILS CHALLENGE</strong></h4>
-          <h3>I am joining Mackenzie Child in his tutorial
-          series that recreates some of the most popular
-          backends using Ruby on Rails.
-          </h3>
-          <br>
-          <a class="button" href=#>Read More</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  </section>
- End {Contact Header} -->
 
   <!-- Portfolio -->
   <section id="work_portfolio">
@@ -173,7 +134,7 @@
         <div class="twelve columns">
           <h4 style="text-align: center"><strong>PORTFOLIO</strong></h4>
           <div class="header-line"></div>
-          <h3 style="text-align: center">Art Direction | Dev Projects | Marketing</h3>
+          <h3 style="text-align: center">Contact me for my private portfolio</h3>
           <div class="center">
           <br>
           <a class="button" href="https://www.dropbox.com/sh/hkhqojtg47pi42a/AABZGE3YHEfd3oN7AVOKYs1ga?dl=0">Extended Portfolio</a>
@@ -184,6 +145,27 @@
     <br><br><br>
     <div class="container portfolio gallery">
         <ul class="full-width-grid">
+          <li>
+            <a href="http://www.cornellthetatau.com/"><img src="images/placeholder13.png" /></a>
+            <div class="portfolio-title">
+            <h4><strong>THETA TAU WEBSITE</strong></h4>
+            <h3>Responsive Web Design</h3>
+            </div>
+          </li>
+          <li>
+            <a href="https://www.behance.net/gallery/26683665/Tinder-inspired-User-Interface"><img src="images/placeholder12.png" /></a>
+            <div class="portfolio-title">
+            <h4><strong>TINDER-LIKE INTERFACE</strong></h4>
+            <h3>User Interface Design</h3>
+            </div>
+          </li>
+          <li>
+            <a href="https://www.behance.net/gallery/29330687/Cornell-Theta-Tau-Marketing"><img src="images/placeholder11.png" /></a>
+            <div class="portfolio-title">
+            <h4><strong>THETA TAU MARKETING</strong></h4>
+            <h3>Marketing</h3>
+            </div>
+          </li>
           <li>
             <a href="https://www.behance.net/gallery/24888061/Cornell-App-Development-Spring-2015"><img src="images/placeholder10.png" /></a>
             <div class="portfolio-title">
@@ -220,13 +202,6 @@
             </div> 
           </li>
           <li>
-            <a href=""><img src="images/placeholder4.png" /></a>
-            <div class="portfolio-title">
-            <h4><strong>WHEATHER THREADY</strong></h4>
-            <h3>iOS Dev, Design, Marketing</h3>
-            </div>
-          </li>
-          <li>
             <a href="https://github.com/andjosaquino/Gnomenwald-Project"><img src="images/placeholder8.png" /></a>
             <div class="portfolio-title">
             <h4><strong>GNOMENWALD PROJECT</strong></h4>
@@ -253,38 +228,7 @@
       </div>
    </section>
   <!-- End {Portfolio Header} -->
-  
-  <div class="section skills">
-    <div class="container">
-      <div class="row left-align">
-        <div class="twelve columns">
-          <h4><strong>I AM AVAILABLE FOR WORK!</strong></h4>
-          <a class="button button-contact button-center" href="#contact_me">Contact Me</a>
-        </div>
-      </div>
-  </div>
-  </div>
-  <!--
-  <div class="section skills">
-    <div class="container">
-      <div class="row">
-          <div class="four columns">
-            <h4 style="text-align: left"><strong>BLOG</strong></h4>
-            <div class="header-line left"></div>
-          </div>
-          <div class="eight columns" style="text-align:center">
-            <h3 class="blog-title"><strong>Some People are Just Not Artistic</strong>             </h3>
-            <h6 class="blog-sub">January 8, 2014</h6><br>
-              <a class="button" href=#>Read More</a>
-              <br><br><br>
-              <h3 class="blog-title"><strong>Some People are Just Not Artistic</strong>             </h3>
-            <h6 class="blog-sub">January 8, 2014</h6><br>
-              <a class="button" href=#>Read More</a>
-          </div>
-        </div>
-      </div>
-  </div>
- -->
+
    <section id="contact_me">
     <div class="section contact">
     <div class="container">
@@ -379,24 +323,8 @@
 <footer>
   <div class="container">
       <div class="row">
-        <div class="three columns">
-          <a class="scroll" href="#about_me"><p>About Me</p></a>
-          <a class="scroll" href="#skillset"><p>Skills</p></a>
-        </div>
-        <div class="three columns">
-          <a class="scroll" href="#work_portfolio"><p>Portfolio</p></a>
-          <a class="scroll" href="#contact_me"><p>Contact</p></a>
-        </div>
-      </div>
-  </div>
-  <br><br>
-  <div class="container">
-      <div class="row">
         <div class="five columns">
           <h6 class="footer-text">© 2015 | ANDREW AQUINO</h6>
-        </div>
-        <div class="one column" style="float:right">
-          <p class="footer-text">Logo</p>
         </div>
       </div>
   </div>
