--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="nine columns">
           <br>
-          <p>I am a junior computer science engineer intending towards a product design or management internship this upcoming summer.
+          <p>I am a junior computer science engineer intending towards a product design or management internship this upcoming summer. Former Buzzfeed Product Design Intern.
           </p>
           <br>
           <br>
